changed the title

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>BeeFFF</title>
+  <title>This is pretty boring isn't it?</title>
 </head>
 <body>
   
   <main>
-    <header id="main-header"><h1>BeeFFF</h1></header>
+    <header id="main-header"><h1>I.. don't know what I should put here</h1></header>
     <hr/>
-	    "This website was created on Wednesday, March 2021"
+	This website was created on Wednesday, March 2021
 	    <img src=gallery/gg.png.png width=500px>
 
       <br/>
