--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="main-header"><h1>I.. don't know what I should put here</h1></header>
     <hr/>
 	This website was created on Wednesday, March 2021
-	    <img src=gallery/gg.png.png width=500px>
+	    <img src=gallery/gg.shadows.png width=500px>
 
       <br/>
       <br/> 
